# ZBuffer-Toy

./: CMakeLists.txt  Controller.cpp  Controller.hh  README.md  Scene.cpp  Scene.hh  resources.qrc
DataService/: Output.hh  SetUp.cpp  SetUp.hh
GPUConnections/: GPUCamera.hh  GPUConnectable.hh  GPULight.cpp  GPULight.hh  GPULightFactory.hh  GPUMaterial.cpp  GPUMaterial.hh  GPUMesh.cpp  GPUMesh.hh  GPUObjectFactory.hh  GPUPointLight.cpp  GPUPointLight.hh  GPUScene.hh  GPUSceneFactory.cpp  GPUSceneFactory.hh  GPUSetUp.cpp  GPUSetUp.hh
Rays/: HitRecord.hh  Hittable.hh  Ray.hh
Render/: ColorShading.hh  ShadingFactory.cpp  ShadingFactory.hh  ShadingStrategy.hh
TemporalVW/: Animation.hh
VW/Lights/: Light.cpp  Light.hh
VW/Materials/: Lambertian.hh  Material.hh
VW/Objects/: Mesh.cpp  Mesh.hh  Object.hh
VW/TG/: TranslateTG.hh
ViewGL/: GLBuilder.cpp  GLBuilder.hh  GLMainWindow.cpp  GLShader.hh  GLWidget.cpp  GLWidget.hh  mainwindow.ui
resources/GPUshaders/: fBlinnPhongShader.glsl  fColorShader.glsl  fEjercicio1Shader.glsl  fEjercicio2Shader.glsl  fMittalGasullShader.glsl  fPhongShader.glsl  fTextureShader.glsl  fToonShader.glsl  vBlinnPhongShader.glsl  vColorShader.glsl  vEjercicio1Shader.glsl  vEjercicio2Shader.glsl  vGouraudBlinnPhongShader.glsl  vGouraudPhongShader.glsl  vMittalGasullShader.glsl  vNormalShader.glsl  vTextureShader.glsl  vToonShader.glsl  vshader1.glsl
resources/scenes/: ex1.json  ex2.json
